--- a/package.json
+++ b/package.json
@@ -62,8 +62,12 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.3.2",
+    "react-facebook-login-component": "^0.6.0",
+    "react-fontawesome": "^1.6.1",
+    "react-google-login-component": "^0.9.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
+    "react-social": "^1.10.0",
     "react-star-rating-component": "^1.2.2",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^1.0.0",
