--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "faker": "^3.1.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
+    "match-sorter": "^2.0.2",
+    "material-ui": "^0.19.4",
     "moment": "^2.17.1",
     "node-sass": "^4.3.0",
     "nodemon": "^1.11.0",
@@ -62,6 +64,7 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.3.2",
+    "react-dropzone": "^4.2.1",
     "react-facebook-login-component": "^0.6.0",
     "react-fontawesome": "^1.6.1",
     "react-google-login-component": "^0.9.2",
@@ -69,6 +72,8 @@
     "react-router": "^3.0.0",
     "react-social": "^1.10.0",
     "react-star-rating-component": "^1.2.2",
+    "react-table": "^6.7.4",
+    "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^1.0.0",
     "redux-logger": "^2.7.0",
@@ -78,9 +83,11 @@
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
+    "superagent": "^3.8.1",
     "webpack": "^1.13.3"
   },
   "devDependencies": {
+    "admin-on-rest": "^1.3.2",
     "chai": "^3.5.0",
     "mocha": "^3.1.2",
     "moment": "^2.17.1",
