--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "superagent": "^3.8.1",
-    "webpack": "^1.13.3"
+    "webpack": "^1.13.3",
+    "stripe": "^5.3.0"
   },
   "devDependencies": {
     "admin-on-rest": "^1.3.2",
