--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chai-enzyme": "^0.5.2",
     "chalk": "^1.1.3",
     "check-node-version": "^1.1.2",
+    "compression": "^1.7.1",
     "cookie-session": "^2.0.0-alpha.1",
     "css-loader": "^0.26.1",
     "enzyme": "^2.5.1",
@@ -80,8 +81,10 @@
     "redux-thunk": "^2.1.0",
     "sass-loader": "^4.1.1",
     "sequelize": "^3.24.6",
+    "serve-favicon": "^2.4.5",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
+    "socket.io": "^1.7.2",
     "style-loader": "^0.13.1",
     "superagent": "^3.8.1",
     "webpack": "^1.13.3",
