--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-router": "^3.0.0",
     "react-social": "^1.10.0",
     "react-star-rating-component": "^1.2.2",
+    "react-stripe-checkout": "^2.6.3",
     "react-table": "^6.7.4",
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.6.0",
@@ -85,10 +86,10 @@
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
     "socket.io": "^1.7.2",
+    "stripe": "^5.3.0",
     "style-loader": "^0.13.1",
     "superagent": "^3.8.1",
-    "webpack": "^1.13.3",
-    "stripe": "^5.3.0"
+    "webpack": "^1.13.3"
   },
   "devDependencies": {
     "admin-on-rest": "^1.3.2",
