--- a/package.json
+++ b/package.json
@@ -94,10 +94,13 @@
   "devDependencies": {
     "admin-on-rest": "^1.3.2",
     "chai": "^3.5.0",
+    "file-loader": "^1.1.5",
+    "image-webpack-loader": "^3.4.2",
     "mocha": "^3.1.2",
     "moment": "^2.17.1",
     "supertest": "^2.0.1",
     "supertest-as-promised": "^4.0.1",
+    "url-loader": "^0.6.2",
     "volleyball": "^1.4.1"
   }
 }
